cmake_minimum_required(VERSION 3.15.1)
project(laplacian-pyramid-library)

set(CMAKE_CXX_STANDARD 17)

OPTION(BUILD_TEST "Build tests" ON)
OPTION(BUILD_DOCUMENTATION "Build documentation" ON)
OPTION(BUILD_CODE_DOCUMENTATION "Build code documentation" ON)
OPTION(BUILD_EXT_LIBS "Build external libraries" ON)

if (BUILD_EXT_LIBS)
    message(STATUS "External libraries are being built")
    add_subdirectory(ext)
    set(BUILD_SHARED_LIBS ON CACHE INTERNAL "")
    find_package(OpenCV REQUIRED CONFIG
            PATHS ${CMAKE_BINARY_DIR}/ext/opencv/opencv)
    unset(BUILD_SHARED_LIBS)
else ()
    message(STATUS "External libraries were not build")
endif ()

add_subdirectory(lib)

if (BUILD_TEST)
    message(STATUS "Tests are being built")
    add_subdirectory(test)
else ()
    message(STATUS "Tests were not build")
endif ()
if (BUILD_DOCUMENTATION)
    message(STATUS "Documentation is being built")
    add_subdirectory(doc_source)
else ()
    message(STATUS "Documentation was not build")
endif ()
if (BUILD_CODE_DOCUMENTATION)
    message(STATUS "Code documentation is being built")
    add_subdirectory(doxygen)
else ()
    message(STATUS "Code documentation was not build")
endif ()