cmake_minimum_required(VERSION 3.15.1)
project(laplacian-pyramid-library)

set(CMAKE_CXX_STANDARD 17)

OPTION(LAPLACIAN_PYRAMID_BUILD_TEST "Build tests" ON)
OPTION(LAPLACIAN_PYRAMID_BUILD_DOCUMENTATION "Build documentation" ON)
OPTION(LAPLACIAN_PYRAMID_BUILD_CODE_DOCUMENTATION "Build code documentation" ON)
OPTION(LAPLACIAN_PYRAMID_BUILD_EXT_LIBS "Build external libraries" ON)

if (LAPLACIAN_PYRAMID_BUILD_EXT_LIBS)
    message(STATUS "laplacian-pyramid -- External libraries are being built")
    include(ext/externals.cmake)

else ()
    message(STATUS "laplacian-pyramid -- External libraries were not build")
endif ()

add_subdirectory(lib)

if (LAPLACIAN_PYRAMID_BUILD_TEST)
    message(STATUS "laplacian-pyramid -- Tests are being built")
    add_subdirectory(test)
else ()
    message(STATUS "laplacian-pyramid -- Tests were not build")
endif ()
if (LAPLACIAN_PYRAMID_BUILD_DOCUMENTATION)
    message(STATUS "laplacian-pyramid -- Documentation is being built")
    add_subdirectory(doc_source)
else ()
    message(STATUS "laplacian-pyramid -- Documentation was not build")
endif ()
if (LAPLACIAN_PYRAMID_BUILD_CODE_DOCUMENTATION)
    message(STATUS "laplacian-pyramid -- Code documentation is being built")
    add_subdirectory(doxygen)
else ()
    message(STATUS "laplacian-pyramid -- Code documentation was not build")
endif ()